force-app/main/default/objects/FEC_Card_Payment__c/FEC_Card_Payment__c.object-meta.xml
<CustomObject>
    <label>Card Payment</label>
    <nameField>
        <displayFormat>CPN - {0}</displayFormat>
        <label>Card Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Card Payment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>