force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>FEC_Base_Rate__c</fullName>
    <label>Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>