force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Begin_Date__c</fullName>
    <label>Begin Date</label>
    <type>Date</type>
</CustomField>