force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Card Payment</relationshipLabel>
    <relationshipName>Card_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>