force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_Close_Fee__c.field-meta.xml
<CustomField>
    <fullName>FEC_Close_Fee__c</fullName>
    <label>Close Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>