force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_Customer_History__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_History__c</fullName>
    <label>Customer History</label>
    <referenceTo>FEC_Customer_History__c</referenceTo>
    <relationshipLabel>Card Payment</relationshipLabel>
    <relationshipName>Card_Payment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>