force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_Full_IPP_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Full_IPP_Payment_Amount__c</fullName>
    <description>Tổng số tiền thanh toán khoản trả góp
Formula = Full Payment Amount - Full Payment Without IPP</description>
    <label>Full IPP Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>