force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_Full_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Full_Payment_Amount__c</fullName>
    <description>Tổng số tiền thanh toán
Formula = Total Balance (real-time) + Sum (Accrued Interest + Per Diem + Deferred Interest + IPP Accrued Interest + Close Fee Amount) of ALL plans</description>
    <label>Full Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>