force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_Full_Payment_Without_IPP__c.field-meta.xml
<CustomField>
    <fullName>FEC_Full_Payment_Without_IPP__c</fullName>
    <description>Tổng số tiền thanh toán không gồm khoản trả góp
Formula = Total Balance (real-time) – Loan Balance + Sum (Accrued Interest + Per Diem + Deferred Interest) of non-IPP plans</description>
    <inlineHelpText>Tổng số tiền thanh toán không gồm khoản trả góp</inlineHelpText>
    <label>Full Payment Without IPP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>