force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_IPP_Interest__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Interest__c</fullName>
    <label>IPP Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>