force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>FEC_Loan_Balance__c</fullName>
    <label>Loan Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>