force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Open_Date__c</fullName>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>