force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>FEC_Per_Diem__c</fullName>
    <label>Per Diem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>