force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_Plan__c.field-meta.xml
<CustomField>
    <fullName>FEC_Plan__c</fullName>
    <label>Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>