force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_Plan_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Plan_Payment_Amount__c</fullName>
    <label>Plan Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>