force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_Rec__c.field-meta.xml
<CustomField>
    <fullName>FEC_Rec__c</fullName>
    <label>Rec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>