force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_REF_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_REF_Number__c</fullName>
    <label>REF Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>