force-app/main/default/objects/FEC_Card_Payment__c/fields/FEC_Total_Accrued_Interest__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Accrued_Interest__c</fullName>
    <label>Total Accrued Interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>